[project]
name = "bp35a1-b-route"
version = "0.1.0"
description = ""
authors = [{ name = "njm2360", email = "me@njm2360.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aioserial (>=1.3.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "asyncio (>=3.4.3,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
